--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^6.5.0",
+		"@reduxjs/toolkit": "^2.8.2",
 		"@svgr/webpack": "^8.1.0",
 		"next": "15.2.4",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"react-redux": "^9.2.0"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
