--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@prisma/client": "^6.5.0",
 		"@reduxjs/toolkit": "^2.8.2",
 		"@svgr/webpack": "^8.1.0",
+		"dompurify": "^3.2.6",
 		"next": "15.2.4",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
