--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@reduxjs/toolkit": "^2.8.2",
 		"@svgr/webpack": "^8.1.0",
 		"dompurify": "^3.2.6",
+		"framer-motion": "^12.15.0",
 		"next": "15.2.4",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
