--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
 		"@svgr/webpack": "^8.1.0",
 		"dompurify": "^3.2.6",
 		"framer-motion": "^12.15.0",
-		"next": "15.2.4",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
+		"next": "^15.4.0-canary.75",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
 		"react-redux": "^9.2.0"
 	},
 	"devDependencies": {
