--- a/package.json
+++ b/package.json
@@ -21,14 +21,21 @@
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
+		"@testing-library/dom": "^10.4.0",
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/react": "^16.3.0",
+		"@types/jest": "^29.5.14",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"eslint": "^9",
 		"eslint-config-next": "15.2.4",
+		"jest": "^30.0.0",
+		"jest-environment-jsdom": "^30.0.0",
 		"madge": "^8.0.0",
 		"prisma": "^6.5.0",
 		"sass": "^1.86.0",
+		"ts-node": "^10.9.2",
 		"typescript": "^5"
 	}
 }
