--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
 	"dependencies": {
 		"@prisma/client": "^6.5.0",
 		"@reduxjs/toolkit": "^2.8.2",
+		"@supabase/ssr": "^0.6.1",
+		"@supabase/supabase-js": "^2.50.0",
 		"@svgr/webpack": "^8.1.0",
 		"dompurify": "^3.2.6",
 		"framer-motion": "^12.15.0",
 		"next": "^15.4.0-canary.75",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
-		"react-redux": "^9.2.0"
+		"react-redux": "^9.2.0",
+		"zod": "^3.25.64"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
