--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"seed": "ts-node --loader ts-node/esm ./src/lib/db/prisma/seed.ts"
+		"seed": "ts-node --loader ts-node/esm ./src/lib/db/prisma/seed.ts",
+		"test": "jest"
 	},
 	"dependencies": {
 		"@prisma/client": "^6.5.0",
@@ -32,6 +33,7 @@
 		"@types/react-dom": "^19",
 		"eslint": "^9",
 		"eslint-config-next": "15.2.4",
+		"identity-obj-proxy": "^3.0.0",
 		"jest": "^30.0.0",
 		"jest-environment-jsdom": "^30.0.0",
 		"madge": "^8.0.0",
