--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"@svgr/webpack": "^8.1.0",
 		"dompurify": "^3.2.6",
 		"framer-motion": "^12.15.0",
-		"next": "^15.4.0-canary.75",
+		"next": "^15.4.2-canary.1",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"zod": "^3.25.64"
@@ -27,6 +27,7 @@
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.3.0",
+		"@testing-library/user-event": "^14.6.1",
 		"@types/jest": "^29.5.14",
 		"@types/node": "^20",
 		"@types/react": "^19",
