--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"dompurify": "^3.2.6",
 		"framer-motion": "^12.15.0",
 		"next": "^15.4.2-canary.1",
+		"next-themes": "^0.4.6",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"zod": "^3.25.64"
